--- a/public/css/style.css
+++ b/public/css/style.css
@@ -540,7 +540,7 @@ section {
 }
 
 /* //////////////////////////// */
-.hoja:hover .hoja-imagen img {
+.hoja:hover .hoja-imagen img{
   border-bottom-left-radius : 0px;
   border-bottom-right-radius: 0px;
   
@@ -559,6 +559,7 @@ section {
 }
 
 
+/* ------------------------ Media Queries ---------------*/
 @media (min-width: 768px) and (max-width: 991px) {
   .hoja{
     width: 200px;
@@ -594,6 +595,25 @@ section {
   .hoja-imagen img {
     width: 230px;
   }
+
+  /* No hacer hover en pantallas pequeñas */
+  .hoja .hoja-imagen img{
+    border-bottom-left-radius : 0px;
+    border-bottom-right-radius: 0px;
+    
+  }
+  .hoja .hoja-text{
+    transform: translateY(5px);
+    height: 80px;
+    margin: 0 0 15px 0;
+    opacity: 1;
+  }
+  
+  .hoja .card-stats{
+    transform: translateY(0px);
+    height                    : 60px;
+    opacity: 1;
+  }
 }
 
 @media(max-width: 576px) {
@@ -613,7 +633,26 @@ section {
     font-size : 18px;
   }
 
+  /* No hacer hover en pantallas pequeñas */
+  .hoja .hoja-imagen img{
+    border-bottom-left-radius : 0px;
+    border-bottom-right-radius: 0px;
+    
+  }
+  .hoja .hoja-text{
+    transform: translateY(5px);
+    height: 80px;
+    margin: 0 0 15px 0;
+    opacity: 1;
+  }
+  
+  .hoja .card-stats{
+    transform: translateY(0px);
+    height                    : 60px;
+    opacity: 1;
+  }
 }
+
 /*--------------------------------------------------------------
 # Resume
 --------------------------------------------------------------*/
