Se modificó el portafolio con unas imágenes coherentes al desarrollo de software

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -494,7 +494,7 @@ section {
 }
 
 .hoja-text p {
-  color      : grey;
+  color      : #222121;
   font-size  : 15px;
   font-weight: 300;
   margin: 10px;
